# card-recognision

./: .gitignore  CMakeLists.txt  main.cpp
src/: CardRecognizer.cpp  CardRecognizer.h  HarrisCornerDetector.cpp  HarrisCornerDetector.h  SIFTDetector.cpp  SIFTDetector.h
tests/: accuracy.cpp  hyperparam.cpp
utils/: modify_hsv.cpp
